--- a/Bernardoni.html
+++ b/Bernardoni.html
@@ -33,6 +33,49 @@
 	<big>(1672-1714)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
+	<h5><big><big><big><big><strong><center>EPISTOLARIO</center></strong></big></big></big></big></big></h5><br><br>
+
+	<p><big>Presentiamo qui la trascrizione senza modifiche di brani di missive pubblicate in volumi a stampa.</big></p><br>
+
+<p><big>[…] <i><strong>il mattissimo, vo’ dire il poetissimo Bernardoni</i></strong> […].</big></p>
+
+<p><big>Lettera di Muratori a Francesco Arisi (1657-1743) datata da Milano il 13 maggio 1699, in L.A. Muratori, <i>Carteggio con Francesco Arisi</i>, a cura di M. Marcocchi, Firenze, Leo S. Olschki, 1975, p. 73 (si tratta del vol. IV dell’<i>Edizione Nazionale del Carteggio di L.A. Muratori</i>).</big></p><br>
+
+<p><big>[…] <i><strong>Io havevo già cominciato a pensare di scrivervi in paradiso, giudicando e voi et il vostro abbatino passati colà su per giocare a scacchi col immortale Nicio Meneladio</i></strong> […].</big> <big>[<i>scil.</i> il poeta milanese Carlo Maria Maggi, spentosi a 69 anni circa tre mesi prima della data di questa missiva]<strong><i>, quando una vostra per via inaspettata (essendomi non so come rimessa da Lione) m’avvisa che siete vivo e che siete in Milano. Con tutta la passione che ho per Delia e con tuttoché siano tre settimane che non ho sue nuove, vi giuro per Dio che la vostra m’è stata più cara che non havrebbe fatto una delle sue lettere, onde, in materia di questo amore, potete capire che sarei quasi sano se potessi essere ingrato. Esso però mi fa questo di bene, che conserverammi forse del tutto libero da altri intrichi in questa gran Babilonia, dove il solo passeggio des Thuillieris, che frequento quasi tutte le sere, potrebbe certamente far divenire matto uno che non fosse impazzito in Italia. Sono queste il real giardino del Louvre dove tutte le più scelte bellezze di Parigi sono verso l’annottare a tender le reti.</strong></i> […] <strong><i>Il resto del giorno o lo dormo o lo mangio, o lo leggo in libri francesi, senza imparar punto di più di quello farei non leggendo.</strong></i> […]</big></p> 
+
+<p><big>Lettera di Bernardoni a Muratori datata da Parigi il 27 luglio 1699, in L.A. Muratori, <i>Carteggi con Bentivoglio … Bertacchini</i>, a cura di A. Burlini Calapaj, Firenze, Leo S. Olschki, 1983, pp. 468-469 (in questo che è il vol. VI dell’<i>Edizione Nazionale del Carteggio di L.A. Muratori</i>, le missive fra i due amici vignolesi giunte fino a noi si trovano alle pp. 438-552).</big></p><br>  
+
+ <p><big>[…] <i><strong>La elezion del nostro Bernardoni in poeta di Sua Maestà Cesarea non poteva cadere in persona più a proposito per quell’impiego. Egli è giovane, ha del talento, della prontezza e dell’esercizio: e vi riescirà fuor dubbio. Rallegratevene per me pure</i></strong> […].</big></p>
+
+ <p><big>Lettera di Apostolo Zeno (1668-1750) a Muratori datata da Venezia il 23 luglio 1701, in L.A. Muratori, in <i>Carteggi con Zacagni … Zurlini</i>, a cura di A. Burlini Calapaj, Firenze, Leo S. Olschki, 1975, pp. 240-242: 242 (si tratta del vol. XLVI dell’<i>Edizione Nazionale del Carteggio di L.A. Muratori</i>).</big></p>  
+
+</big></p><br>
+
+<p><big><strong><i>Voi havete un bel dire co’ vostri rimproveri alla mia pretesa poltroneria. Io non rimetterò e non posso rimettere la mano ai Fasti se non vengo per sei mesi in Italia, o se almeno qui non viene uno scorruccio d’altri sei mesi, essendo che, dopo d’essermi ben stancato attorno ad un componimento, ho bisogno di riposarmi e tenermi la testa fresca per un altro di cui potessi improvisamente esser caricato</strong></i> […]<strong><i>. Quanto poi alla minaccia che mi fate di non poter io per le cose da me composte vivere nella memoria de’ posteri, io la trovo molto ben fondata, stante la cognitione che ho delle cose mie, ma non me ne metto gran pena, e mi consolo che, se non potrò vivere dopo morte, ho almeno di che vivere agiatamente prima di morire.</strong></i> […]</big></p>  
+
+<p><big>Lettera di Bernardoni a Muratori datata da Vienna il 9 giugno 1703, in L.A. Muratori, <i>Carteggi con Bentivoglio … Bertacchini</i>, cit., pp. 498-499.</big></p><br>  
+
+ 
+<p><big>[…] <strong><i>Voi siete forse mal informato nel proposito della bella pentita cosellina di Bologna, e se io stimassi discretezza il mandarvi un paio delle di lei lettere vi confessereste probabilmente ingannato, essendo state avedute le mie commissioni, da chi le ha parlato, et essendo stata convenuta di mantenermi la parola che pretendevasi data di sposarmi, quando io solo intendeva che si pregasse ad osservarmi la promessa fattami che la mia lontananza non mi avrebbe punto pregiudicato presso di lei. L’ho amata tenerissimamente, e non sono affatto guarito di questo male, ma posso ben giurarvi che non mi sarei indotto mai a far un tal passo se non in caso d’esser astretto a darle una prova infallibile della grandezza e purità del mio affetto benché, nonostante la di lei sospetta professione, io la conosco di una virtù irreprensibile. La sposerei perciò, ve lo confesso, se ella mi scrivesse di esiggere da me questa testimonianza d’amore, ma sicome ella non vi pensa, così ho scritto io al nostro signor marchese Orsi, e scrivo anche a voi che se in Bologna od in Modona si trovasse una giovane di buona nascita, di buoni costumi, e più tosto bella che brutta, la preferirei volentieri ad una tedesca, ancorché più ricca dell’italiana. Guardate se v’è costì chi voglia guadagnare questa sensaleria.</strong></i> […]</big></p>  
+
+<p><big>Lettera di Bernardoni a Muratori datata da Vienna il 17 dicembre 1707, in L.A. Muratori, <i>Carteggi con Bentivoglio … Bertacchini</i>, cit., pp. 527-529: 528-529 (si tratta del primo <i>P.S.</i>, qui riportato quasi per intero).</big></p><br>  
+
+
+<p><big>[…] <strong><i>Né temiate che la voragine del gioco abbia da inghiottirsi sostanze da me acquistate con tanto stento e rammarico. Gli anni e l’esperienza m’hanno guarito da questa passione, ed è ciò tanto vero che, doppoiché la Dassetta</strong></i> [<i>sic</i>, probabilmente per «bassetta», diffuso gioco di carte] <strong><i>ha bandito da queste conversazioni gli altri giochi ne’ quali ha qualche parte l’industria, e ne’ quali la fortuna m’ha trattato assai bene, con tutte le occasioni che ho ogni giorno di giocare e con tutto il commodo che me ne dava la mia borsa, gioco rarissime volte, e quelle, o all’ombre o a picchetto o al biliardo, dove non trovo il pericolo di far grosse perdite giocando picciolo gioco.</strong></i> […]</big></p>  
+
+ 
+
+<p><big>Lettera di Bernardoni a Muratori datata da Vienna il 5 luglio 1710, in L.A. Muratori, <i>Carteggi con Bentivoglio … Bertacchini</i>, cit., p. 550.</big></p><br><br>  
+
+ 
+
+ 
+
+	<h5><big><big><big><big><strong><center>FILMATO</center></strong></big></big></big></big></big></h5><br><br>
+	<p><big>Proponiamo qui un breve filmato durante il quale vengono sfogliate le pagine iniziali di <i><strong>Rime varie, consagrate alla S.C.R. Maestà di Giuseppe I. August.mo Imperator de’ Romani, da Pietro Antonio Bernardoni Poeta Cesareo, et Accademico Gelato, Arcade, Scomposto, Animoso, et Acceso</i>, Vienna d’Austria, Appresso Gio. Van Ghelen, 1705</strong>. L’esemplare utilizzato appartiene a una collezione privata vignolese.</big></p>
+<video width="500" height="350" controls>
+    <source src="video/VIDEO BERNARDONI.mp4" type="video/mp4">
+</video><br><br><br><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 	<p><center><big><big>Giuseppe Guzzi (notizie tra il 1834 e il 1842), ritratto postumo di Pietro Antonio Bernardoni, incisione, a partire da un disegno fatto dal vivo.<br> Fonte: <i>Iconografia dei celebri vignolesi. Opera edita per cura di Francesco Selmi</i>, Modena, A spese di Giuseppe Lupi librajo, 1839. Il piccolo libro in<br> oggetto è una pubblicazione periodica di natura collettiva costituita di sette dispense singole (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato, ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate: <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio<br> Bernardoni</i>, <i>Agostino Paradisi</i>, <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione di Guzzi apre la dispensa su<br> Bernardoni, il cui testo scritto è firmato in calce «P……».</big></big></center></p>
 <img src="img/celebri vignolesi/Bernardoni/Incisione.jpg" width="450" height="770"><br><br><br>
