--- a/Muratori.html
+++ b/Muratori.html
@@ -83,7 +83,7 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="350" height="600"><br><br><br>
 <p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’Associazione “Amici dell’Arte Vignola”.</big></center></p>
 <img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
-<p><center><big>Facciata della Biblioteca Ambrosiana, a Milano.</big></center></p>
+<p><center><big>Facciata della Venerabile Biblioteca Ambrosiana, a Milano.</big></center></p>
 <img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
 <p><center><big>Facciata della chiesa di Santa Maria della Pomposa.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/facciata.jpg" width="800" height="580"><br><br>
