--- a/Fontana.html
+++ b/Fontana.html
@@ -34,7 +34,8 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-	<p><center><big><big>Barthélemy Fenis (attivo fino al 1669), ritratto postumo di Giovanni Fontana, incisione. Si trova in <i>Catalogo de Vescovi Modonesi, e racconti dell’attioni loro nel reggere varie Chiese dentro, e fuori dell’Italia con molte figure di quelli cauate da suoi Ritratti naturali: Opera di D. Lodovico Vedriani da Modona, dedicata all’Illustrissimo, e Reuerendissimo Sig. Conte Ettorre Molza vescovo di detta Città</i>,<br> In Modona, Per Bartolomeo Soliani Stampator Duc., 1669, p. 143. Fonte: google.com </big></big></center><br>
+
+<p><center><big><big>Barthélemy Fenis (attivo fino al 1669), ritratto postumo di Giovanni Fontana, incisione. Si trova in <i>Catalogo de Vescovi Modonesi,<br> e racconti dell’attioni loro nel reggere varie Chiese dentro, e fuori dell’Italia con molte figure di quelli cauate da suoi Ritratti naturali: <br> Opera di D. Lodovico Vedriani da Modona, dedicata all’Illustrissimo, e Reuerendissimo Sig. Conte Ettorre Molza vescovo di detta Città</i>,<br> In Modona, Per Bartolomeo Soliani Stampator Duc., 1669, p. 143. Fonte: google.com </big></big></center><br>
 	<center><img src="img/celebri vignolesi/Fontana Giovanni/Fontana incisione.jpg" width="450" height="650"></center><br>
 <p><center><big><big>Edificio che tradizionalmente viene considerato la casa natale di Fontana.<br> È situato nell’attuale Piazza Boncompagni.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Fontana Giovanni/casa natale.jpg" width="350" height="650"></center></p>
