--- a/Muratori.html
+++ b/Muratori.html
@@ -73,23 +73,23 @@
 <p><big><i>Della Carità Cristiana, in quanto essa è Amore del Prossimo, Trattato Morale di Lodovico Antonio Muratori</i> [...], In Modena, Per Bartolomeo Soliani Stampatore Ducale, 1723, p. 227 (cap. XXII).</big></p><br><br><br>
  	
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><center><big><big>La statua di gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center></p><br>
+<p><center><big><big>La statua in gesso raffigurante Muratori eseguita nel 1847 dall’artista modenese Adeodato Malatesta (1806-1891).<br> È attualmente collocata nell’atrio della Villa Tosi Bellucci, dal 1916 Residenza Municipale di Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
 <p><center><big>C.A. [Claudio Artaria (1818-1872)], ritratto postumo di Lodovico Antonio Muratori, incisione, a partire dal<br> ritratto esistente nella Venerabile Biblioteca Ambrosiana di Milano. Fonte: <i>Iconografia dei celebri vignolesi.<br> Opera edita per cura di Francesco Selmi</i>, Modena, A spese di Giuseppe Lupi librajo, 1839.<br> Il piccolo libro in oggetto è una pubblicazione periodica di natura collettiva costituita di sette dispense singole<br> (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato,<br> ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate:<br> <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>,<br> <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione di Artaria apre la dispensa su Muratori, <br>il cui testo scritto è firmato in calce da Gianfrancesco Galeani Napione.</big></center><br>
-	<img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori incisione.jpg" width="450" height="770"><br><br><br>	
-<p><center><big>Casa natale del grande storico ed erudito situata fra le attuali Vie Selmi e Muratori. È Monumento Nazionale dal 1940.</big></big></center><br>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/casa natale esterna.jpg" width="700" height="500"></p><br><br>
-<p><center><big>Camera natale (o studiolo) di Muratori, particolare.<br> Foto scattata il 15 febbraio 2020, in occasione della sua riapertura al pubblico.</big></center><br>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori incisione.jpg" width="450" height="770"><br><br><br>
+<p><center><big>Casa natale del grande storico ed erudito situata fra le attuali Vie Selmi e Muratori. È Monumento Nazionale dal 1940.</big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/casa natale esterna.jpg" width="700" height="500"><br><br>
+<p><center><big>Camera natale (o studiolo) di Muratori, particolare.<br> Foto scattata il 15 febbraio 2020, in occasione della sua riapertura al pubblico.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="350" height="600"><br><br><br>
-<p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’Associazione “Amici dell’Arte Vignola”.</big></center></p>
+<p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall'artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
 <img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
-<p><center><big>Facciata della Venerabile Biblioteca Ambrosiana, a Milano.</big></center></p>
+<p><center><big>Facciata della Biblioteca Ambrosiana, a Milano.</big></center></p>
 <img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
 <p><center><big>Facciata della chiesa di Santa Maria della Pomposa.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/facciata.jpg" width="800" height="580"><br><br>
-<p><center><big>Parte esterna dell’Aedes Muratoriana in una fotografia recente scattata in Via della Pomposa, a Modena<br> (dietro Santa Maria della Pomposa). Si tratta della canonica nella quale il celebre Vignolese abitò dal 1716 al 1750.</big></center></p>
+<p><center><big>Aedes Muratoriana (casa nella quale Muratori abitò dal 1716 al 1750.<br> L’accesso si trova dietro Santa Maria della Pomposa).</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/aedes.jpg" width="450" height="600"><br><br>
-<p><center><big>Lapide che sormonta l’ingresso dell’Aedes Muratoriana. Ricorda la figura del celebre Vignolese.</big></center></p>
+<p><center><big>Lapide che sormonta l’ingresso della Aedes Muratoriana. Ricorda la figura del celebre Vignolese.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapide.jpg" width="650" height="530"><br><br>
 <p><center><big>Tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930<br> su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="500" height="650"></p>
