--- a/Muratori.html
+++ b/Muratori.html
@@ -81,7 +81,7 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/casa natale esterna.jpg" width="700" height="500"><br><br>
 <p><center><big>Camera natale (o studiolo) di Muratori, particolare.<br> Foto scattata il 15 febbraio 2020, in occasione della sua riapertura al pubblico.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="350" height="600"><br><br><br>
-<p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall'artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
+<p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
 <img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
 <p><center><big>Facciata della Biblioteca Ambrosiana, a Milano.</big></center></p>
 <img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
