--- a/Muratori.html
+++ b/Muratori.html
@@ -92,7 +92,7 @@
 <p><center><big>Lapide che sormonta l’ingresso della Aedes Muratoriana. Ricorda la figura del celebre Vignolese.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapide.jpg" width="650" height="530"><br><br>
 <p><center><big>Tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930<br> su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931.</big></center></p>
-<img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="500" height="650"></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="500" height="650"><br><br>
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
