--- a/civetta.html
+++ b/civetta.html
@@ -44,7 +44,7 @@ La civetta in duecent’anni non si convertì tuttavia; e impreca contro di chi 
 E nel nome de’ suoi occhi darà materie di fede a sé, la pretenderà dagli altri, e durerà impenitente. 
 </big></p><br><br><br>
 
-p><big>* Qui e nell’<i>incipit</i> della favola, nell’originale viene preferita la forma «Civetta»; nel resto della favola e pure nell’Indice finale del volumetto, invece, si trova «civetta», forma che abbiamo deciso di utilizzare dappertutto, anche perché nelle altre favole della raccolta il nome delle diverse specie animali è sempre scritto con la minuscola.</big></p><br><br><br>
+<p><big>* Qui e nell’<i>incipit</i> della favola, nell’originale viene preferita la forma «Civetta»; nel resto della favola e pure nell’Indice finale del volumetto, invece, si trova «civetta», forma che abbiamo deciso di utilizzare dappertutto, anche perché nelle altre favole della raccolta il nome delle diverse specie animali è sempre scritto con la minuscola.</big></p><br><br><br>
 
 
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></strong></center></p><br><br>
