--- a/Muratori.html
+++ b/Muratori.html
@@ -77,12 +77,14 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori.jpg" width="240" height="650"><br><br><br>
 <p><center><big>C.A. [Claudio Artaria (1818-1872)], ritratto postumo di Lodovico Antonio Muratori, incisione, a partire dal<br> ritratto esistente nella Venerabile Biblioteca Ambrosiana di Milano. Fonte: <i>Iconografia dei celebri vignolesi.<br> Opera edita per cura di Francesco Selmi</i>, Modena, A spese di Giuseppe Lupi librajo, 1839.<br> Il piccolo libro in oggetto è una pubblicazione periodica di natura collettiva costituita di sette dispense singole<br> (le quali presentano in alcuni casi note tipografiche parzialmente diverse da quelle che si trovano nel volumetto rilegato,<br> ad esempio «Presso il libraio Giuseppe Luppi»; quest’ultimo, peraltro, risulta il nome corretto del libraio modenese), così intitolate:<br> <i>Jacopo Cantelli</i>, <i>Lodovico Antonio Muratori</i>, <i>Jacopo Barozzi da Vignola</i>, <i>Pietro Antonio Bernardoni</i>, <i>Agostino Paradisi</i>,<br> <i>Giuseppe Soli</i>, <i>Veronica Cantelli Tagliazucchi</i>. L’incisione di Artaria apre la dispensa su Muratori, <br>il cui testo scritto è firmato in calce da Gianfrancesco Galeani Napione.</big></center><br>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/Muratori incisione.jpg" width="450" height="770"><br><br><br>
+<p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
+<img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
 <p><center><big>Casa natale del grande storico ed erudito situata fra le attuali Vie Selmi e Muratori. È Monumento Nazionale dal 1940.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/casa natale esterna.jpg" width="700" height="500"><br><br>
 <p><center><big>Camera natale (o studiolo) di Muratori, particolare.<br> Foto scattata il 15 febbraio 2020, in occasione della sua riapertura al pubblico.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="350" height="600"><br><br><br>
-<p><center><big>Ritratto di fantasia di Muratori, litografia realizzata nel 2021 dall’artista vignolese Domenico Simonini (n. 1952).<br> L’opera è stata eseguita per l’associazione Amici dell’Arte Vignola.</big></center></p>
-<img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
+<p><center><big>Lapide apposta sul muro esterno della prima scuola di Muratori (oggi Canonica), a Vignola.</big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidecanonica.jpg" width="820" height="600"><br><br><br>
 <p><center><big>Facciata della Biblioteca Ambrosiana, a Milano.</big></center></p>
 <img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
 <p><center><big>Facciata della chiesa di Santa Maria della Pomposa.</big></center></p>
@@ -93,6 +95,8 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapide.jpg" width="650" height="530"><br><br>
 <p><center><big>Tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930<br> su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="500" height="650"><br><br>
+<p><center><big>Lapide dedicata a Muratori nella chiesa dei SS. Nazario e Celso a Vignola.</big></center></p>
+<img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidechiesa.jpg" width="900" height="630"></p>	
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
