--- a/Fontana.html
+++ b/Fontana.html
@@ -34,10 +34,12 @@
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	<p></p>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><center><big><big>Barthélemy Fenis (attivo fino al 1669), ritratto postumo di Giovanni Fontana, incisione. Si trova in<br> <i>Catalogo de Vescovi Modonesi, e racconti dell’attioni loro nel reggere varie Chiese dentro, e fuori dell’Italia<br> con molte figure di quelli cauate da suoi Ritratti naturali: Opera di D. Lodovico Vedriani da Modona, dedicata<br> all’Illustrissimo, e Reuerendissimo Sig. Conte Ettorre Molza vescovo di detta Città</i>, In Modona,<br> Per Bartolomeo Soliani Stampator Duc., 1669, p. 143. Fonte: google.com </big></big></center><br>
-	<center><img src="img/celebri vignolesi/Fontana Giovanni/Fontana incisione.jpg" width="450" height="650"></center><br>
 <p><center><big><big>Edificio che tradizionalmente viene considerato la casa natale di Fontana.<br> È situato nell’attuale Piazza Boncompagni.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Fontana Giovanni/casa natale.jpg" width="350" height="650"></center></p>
+<p><center><big><big>Barthélemy Fenis (attivo fino al 1669), ritratto postumo di Giovanni Fontana, incisione. Si trova in<br> <i>Catalogo de Vescovi Modonesi, e racconti dell’attioni loro nel reggere varie Chiese dentro, e fuori dell’Italia<br> con molte figure di quelli cauate da suoi Ritratti naturali: Opera di D. Lodovico Vedriani da Modona, dedicata<br> all’Illustrissimo, e Reuerendissimo Sig. Conte Ettorre Molza vescovo di detta Città</i>, In Modona,<br> Per Bartolomeo Soliani Stampator Duc., 1669, p. 143. Fonte: google.com </big></big></center><br>
+<center><img src="img/celebri vignolesi/Fontana Giovanni/Fontana incisione.jpg" width="450" height="650"></center><br>
+	<p><center><big><big>Lapide che menziona i lasciti di Fontana in favore della vignolese Società del Santo Rosario.<br>È collocata nella chiesa dei Santi Nazario e Celso di Vignola.</big></big></center><br>
+<center><img src="img/celebri vignolesi/Fontana Giovanni/lapidechiesa.jpg" width="450" height="600"></center></p><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
