--- a/Minghelli.html
+++ b/Minghelli.html
@@ -44,6 +44,9 @@ A Minghelli il paese natale ha voluto dedicare una strada. Inoltre, sono tuttora
 <center><img src="img/celebri vignolesi/Minghelli/soffitto2.jpg"="900" height="600"></center><br><br>
 <p><big><big><center>Lapide funeraria di Minghelli all’interno del cimitero di Vignola.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Minghelli/tomba.jpg" width=700 height=450></center><br><br><br>
+<p><big><big><center>Lapide presente dal 1862 nella chiesa dei Santi Nazario e Celso a Vignola.<br>
+	Fu voluta dai nipoti nel 40° anniversario della scomparsa di Minghelli.</center></big></big></p>
+<center><img src="img/celebri vignolesi/Minghelli/lapidechiesa.jpg" width="700" height="480"></center><br><br><br>	
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
