--- a/Soli2.html
+++ b/Soli2.html
@@ -45,6 +45,8 @@
 	<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="450" height="620"><br><br>
 <p><center><big><big>Monumento a Carlo Porta (1966), bronzo. Milano, Verziere.</big></big></center><br>
 	<img src="img/FOTO VARIE/monumento.jpg" width="430" height="850"><br><br><br>
+	<p><center><big><big><i>Pietà</i> (data ignota), bronzo dorato. Vignola, chiesa dei Santi Nazario e Celso.</big></big></center><br>
+	<img src="img/celebri vignolesi/Soli Ivo/pietà.jpg" width="1050" height="650"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
