--- a/Muratori.html
+++ b/Muratori.html
@@ -85,7 +85,7 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="350" height="600"><br><br><br>
 <p><center><big>Lapide apposta sul muro esterno della prima scuola di Muratori (oggi Canonica), a Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidecanonica.jpg" width="820" height="600"><br><br><br>
-<p><center><big>Facciata della Biblioteca Ambrosiana, a Milano.</big></center></p>
+<p><center><big>Facciata della Venerabile Biblioteca Ambrosiana, a Milano.</big></center></p>
 <img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
 <p><center><big>Facciata della chiesa di Santa Maria della Pomposa.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/facciata.jpg" width="800" height="580"><br><br>
