--- a/Fontana.html
+++ b/Fontana.html
@@ -38,7 +38,7 @@
 <center><img src="img/celebri vignolesi/Fontana Giovanni/casa natale.jpg" width="350" height="650"></center></p>
 <p><center><big><big>Barthélemy Fenis (attivo fino al 1669), ritratto postumo di Giovanni Fontana, incisione. Si trova in<br> <i>Catalogo de Vescovi Modonesi, e racconti dell’attioni loro nel reggere varie Chiese dentro, e fuori dell’Italia<br> con molte figure di quelli cauate da suoi Ritratti naturali: Opera di D. Lodovico Vedriani da Modona, dedicata<br> all’Illustrissimo, e Reuerendissimo Sig. Conte Ettorre Molza vescovo di detta Città</i>, In Modona,<br> Per Bartolomeo Soliani Stampator Duc., 1669, p. 143. Fonte: google.com </big></big></center><br>
 <center><img src="img/celebri vignolesi/Fontana Giovanni/Fontana incisione.jpg" width="450" height="650"></center><br>
-	<p><center><big><big>Lapide che menziona i lasciti di Fontana in favore della vignolese Società del Santo Rosario.<br>È collocata nella chiesa dei Santi Nazario e Celso di Vignola.</big></big></center><br>
+	<p><center><big><big>Lapide che menziona i lasciti di Fontana in favore della vignolese Società del Santo Rosario.<br>È collocata nella chiesa dei Santi Nazario e Celso a Vignola.</big></big></center><br>
 <center><img src="img/celebri vignolesi/Fontana Giovanni/lapidechiesa.jpg" width="450" height="600"></center></p><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></p><br>
 </section>
