--- a/Muratori.html
+++ b/Muratori.html
@@ -95,7 +95,7 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapide.jpg" width="650" height="530"><br><br>
 <p><center><big>Tomba monumentale di Muratori in Santa Maria della Pomposa, opera realizzata tra il 1928 e il 1930<br> su disegno dell’artista milanese Lodovico Pogliaghi (1857-1950), e inaugurata nel 1931.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/sepolcro.jpg" width="500" height="650"><br><br>
-<p><center><big>Lapide dedicata a Muratori nella chiesa dei SS. Nazario e Celso a Vignola.</big></center></p>
+<p><center><big>Lapide dedicata a Muratori nella chiesa dei Santi Nazario e Celso a Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidechiesa.jpg" width="900" height="630"></p>	
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
