--- a/Muratori.html
+++ b/Muratori.html
@@ -83,7 +83,7 @@
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/casa natale esterna.jpg" width="700" height="500"><br><br>
 <p><center><big>Camera natale (o studiolo) di Muratori, particolare.<br> Foto scattata il 15 febbraio 2020, in occasione della sua riapertura al pubblico.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/studiolo.jpg" width="350" height="600"><br><br><br>
-<p><center><big>Lapide apposta sul muro esterno della prima scuola di Muratori (oggi Canonica), a Vignola.</big></center></p>
+<p><center><big>Lapide apposta sul muro esterno della prima scuola di Muratori (oggi canonica), a Vignola.</big></center></p>
 <img src="img/celebri vignolesi/Muratori Lodovico Antonio/lapidecanonica.jpg" width="820" height="600"><br><br><br>
 <p><center><big>Facciata della Venerabile Biblioteca Ambrosiana, a Milano.</big></center></p>
 <img src="img/FOTO VARIE/bibliotecaambrosiana.jpg" width="550" height="750"><br><br><br>
