--- a/Paradisi.html
+++ b/Paradisi.html
@@ -46,7 +46,43 @@ Per tutta la vita dell’intellettuale emiliano, un profondo sentimento della gr
 Il nostro personaggio fu un insigne esponente della gloriosa e composita “scuola sperimentale” estense: con le sue idee e il suo operato, infatti, egli dimostrò molto bene come, nel Ducato di Modena, il pensiero riformatore al tempo fosse – per così dire – “di casa”, in quanto possedeva un solido retroterra culturale che affondava le radici nel XVII secolo e che risultava basato sullo “spirito galileiano”, cioè sulla «sperienza». Questo contribuisce a spiegare perché, a partire dalla metà del Settecento, alcune tendenze, proposte e finalità tipiche dell’Illuminismo europeo abbiano potuto attecchire e adattarsi con una certa facilità negli Stati estensi.<br>
 Paradisi fu membro di innumerevoli istituzioni culturali: tra le più prestigiose, sono da annoverare l’Accademia della Crusca e quella delle Scienze dell’Istituto di Bologna. Godette della profonda stima sia di molti eminenti uomini di cultura del suo tempo, spaziando da Voltaire (1694-1778) al summenzionato Carlo Goldoni, da Saverio Bettinelli (1718-1808) a Carlo Innocenzo Frugoni (1692-1768), da Francesco Algarotti (1712-1764) a Lazzaro Spallanzani (1729-1799), dal già ricordato Cesare Beccaria a Carlo Denina (1731-1813), sia di sovrani, come il re di Prussia Federico II (1712-1786, sul trono dal 1740 alla morte) e il più volte citato duca di Modena Francesco III.<br> Il primogenito di Paradisi, Giovanni (1760-1826), diventò anch’egli celebre: cospicui risultarono infatti i suoi meriti letterari e scientifici (poesia, storia, lingue greca e francese, eloquenza, diritto, fisica, geometria ecc.), e di grande rilievo fu la sua intensa e prolungata attività politica, svolta sotto il regime napoleonico.<br>  
 Il nostro personaggio spirò a Reggio Emilia il 19 febbraio 1783. Fu inumato nella locale chiesa di San Domenico, a pochi passi dal Palazzo Gabbi (oggi Palazzo Tirelli), che era stata la sua dimora per molti anni.<br>A Vignola sono attualmente intitolati a lui una strada, un Istituto d’Istruzione Superiore e un Circolo; nella rocca, è apposta una lapide che ricorda che il famoso intellettuale nacque al suo interno il 26 aprile 1736.</big></p><br><br><br>
+	
+<h5><big><big><big><big><strong><center>BIBLIOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
 
+<p><big>ALFIERI, <i>Laura Margherita: Aspetti della cultura economica modenese nella seconda metà del XVIII secolo: Agostino Paradisi e Ludovico Ricci</i>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, coordinamento di L.M. Alfieri, Modena, Mucchi, 1988, pp. 117-170.</big></p>
+
+<p><big>EAD.: <i>Gli scritti di Agostino Paradisi (1736-1783) e la pubblica felicità</i>, «Bollettino Storico Reggiano», a. XXXIX (2006), n. 132, pp. 53-89.</big></p>
+
+<p><big>CAGNOLI, Luigi: <i>Elogio del conte Agostino Paradisi recitato nel solenne aprimento delle scuole di Reggio il dì XXV novembre MDCCCXI</i>, in <i>Poesie e prose scelte del conte Agostino Paradisi</i>, 2 tt., Reggio [Emilia], Per Pietro Fiaccadori, 1827, t. I (senza titolo specifico), pp. V-XLVII.<br>
+Del presente testo esiste una 2a edizione corretta e ampliata: <i>Elogio del conte Agostino Paradisi recitato nel solenne aprimento delle scuole di Reggio il dì XXV novembre MDCCCXI da Luigi Cagnoli</i>, in <i>Poesie scelte del conte Agostino Paradisi con l’elogio dell’Autore</i>, Milano, Dalla Società Tipografica de’ Classici Italiani, 1830, pp. VII-LXVIII.</big></p>
+
+<p><big>CAVATORTI, Giuseppe: <i>Agostino Paradisi (1736-1783). Monografia. Parte I (1736-1764)</i>, Torino, Carlo Clausen - Hans Rinck (Villafranca [VR], Tipo-Litografia L. Rossi), 1907.</big></p>
+
+<p><big>DATTERO, Alessandra: <i>Paradisi, Agostino</i>, in <i>Dizionario Biografico degli Italiani</i>, vol. LXXXI, Roma, Istituto della Enciclopedia italiana, 2014, pp. 281-286.
+Questa voce enciclopedica è disponibile anche sul sito della <a href="http://www.treccani.it/enciclopedia/agostino-paradisi_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione.</big></p>
+
+<p><big><i>Elogio del Conte Agostino Paradisi del dott. Pietro Schedoni</i>, Modena, Presso la Società Tipografica, 1789.<br>
+Il testo del presente volumetto venne poi migliorato e accresciuto due volte: 2a edizione, con lo stesso titolo, In Modena, Presso la Società Tipografica, 1793; 3a edizione, <i>Elogio del conte Agostino Paradisi scritto dal sig. Pietro Schedoni</i>, Modena, Per gli eredi Soliani, Tipografi Reali, 1819.</big></p>
+
+<p><big>MONTAGUTI, Silvio - ARMANI, Giuseppe: <i>Agostino Paradisi. 1736-1783</i>, Vignola (MO), Centro di documentazione, 1983.</big></p>
+
+<p><big>TAMASSIA, Franco: <i>Le idee di filosofia politica e giuridica di Agostino Paradisi</i>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, cit., pp. 172-259.</big></p>
+
+<p><big>VENTURELLI, Piero: <i>Verso il Risorgimento. Agostino Paradisi</i> junior <i>(1736-1783): vita, opere e patriottismo culturale di un grande illuminista italiano</i>, «Il Pensiero Mazziniano. Democrazia in azione», N.S., a. LXVIII (2013), fasc. 3 [ma: 2014], pp. 11-40.</big></p>
+
+<p><big>ID.: <i>Agostino Paradisi</i> iunior <i>(1736-1783). Uomo di lettere e di teatro. Storico ed economista</i>, «Bibliomanie. Letterature, storiografie, semiotiche», a. X (2014), n. 1 [complessivamente, n. 35], <a href="https://www.bibliomanie.it/?p=1742">Bibliomanie</a>, senza paginazione.</big></p>
+
+<p><big>ID.: <i>Agostino Paradisi il Giovane e la polemica letteraria italo-francese del 1765</i>, «Gente di Panaro. Rassegna di storia, “storie” e cultura locale – Valle del Panaro», a cura del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, n. 17 (2015), pp. 61-102.</big></p>
+
+<p><big>ID.: <i>Alexandre Deleyre, Agostino Paradisi</i> il Giovane <i>e la polemica letteraria del 1765 sulla (presunta) decadenza dell’Italia</i>, «Montesquieu.it», n. 10 (2018), pp. 139-201.
+Quest’articolo è disponibile anche sul sito <a href="https://montesquieu.unibo.it/article/view/8989/8895">«Montesquieu.it»</a>, alle pp. 1-35.</big></p>
+
+<p><big>ID.: <i>Un ammiratore di Dante nel XVIII secolo, Agostino Paradisi</i> il Giovane, «Montesquieu.it», n. 13 (2021), pp. 167-193.
+Quest’articolo è disponibile anche sul sito <a href="https://montesquieu.unibo.it/article/view/12595/12403">«Montesquieu.it»</a>, alle pp. 1-15.</big></p>
+
+<p><big>VENTURI, Franco: <i>Ritratto di Agostino Paradisi</i>, «Rivista storica italiana», a. LXXIV (1962), fasc. 4, pp. 717-738.</big></p><br><br><br>
+	
+	
 <h5><big><big><big><big><strong><center>PARADISI E L’APOLOGIA DI DANTE</center></strong></big></big></big></big></big></h5><br><br>
 <p><big>Nel XVIII secolo, erano tutto sommato poche le persone colte che, in Italia come all’estero, ammiravano la poesia di Dante: in quel periodo, infatti, si preferivano generalmente opere in versi caratterizzate da un disegno armonico e da uno stile chiaro, elegante e sostenuto, e prive di nozioni e rimandi filosofico-teologici tratti dalla Scolastica; la <i>Commedia</i>, invece, era contraddistinta non di rado da un lessico basso e veniva ritenuta troppo oscura, disordinata e intrisa di idee medioevali.<br>
 Nonostante il clima culturale razionalista che dominava nella sua epoca, Paradisi tributò per tutta la vita elogi alti e convinti al grande Fiorentino. E, anzi, a contribuire molto a far conoscere e apprezzare in tutt’Italia l’autore emiliano, quando egli aveva da poco superato i vent’anni d’età e non era quasi per nulla noto fuori del Ducato di Modena, fu proprio l’uscita di una sua ispirata ode in difesa di Dante nella rivista veneziana «Memorie per servire all’istoria letteraria» (dicembre 1758).<br>
