--- a/Paradisi.html
+++ b/Paradisi.html
@@ -54,7 +54,7 @@ Il nostro personaggio spirò a Reggio Emilia il 19 febbraio 1783. Fu inumato nel
 <p><big>EAD.: <i>Gli scritti di Agostino Paradisi (1736-1783) e la pubblica felicità</i>, «Bollettino Storico Reggiano», a. XXXIX (2006), n. 132, pp. 53-89.</big></p>
 
 <p><big>CAGNOLI, Luigi: <i>Elogio del conte Agostino Paradisi recitato nel solenne aprimento delle scuole di Reggio il dì XXV novembre MDCCCXI</i>, in <i>Poesie e prose scelte del conte Agostino Paradisi</i>, 2 tt., Reggio [Emilia], Per Pietro Fiaccadori, 1827, t. I (senza titolo specifico), pp. V-XLVII.<br>
-Del presente testo esiste una 2a edizione corretta e ampliata: <i>Elogio del conte Agostino Paradisi recitato nel solenne aprimento delle scuole di Reggio il dì XXV novembre MDCCCXI da Luigi Cagnoli</i>, in <i>Poesie scelte del conte Agostino Paradisi con l’elogio dell’Autore</i>, Milano, Dalla Società Tipografica de’ Classici Italiani, 1830, pp. VII-LXVIII.</big></p>
+Del presente testo esiste una II edizione corretta e ampliata: <i>Elogio del conte Agostino Paradisi recitato nel solenne aprimento delle scuole di Reggio il dì XXV novembre MDCCCXI da Luigi Cagnoli</i>, in <i>Poesie scelte del conte Agostino Paradisi con l’elogio dell’Autore</i>, Milano, Dalla Società Tipografica de’ Classici Italiani, 1830, pp. VII-LXVIII.</big></p>
 
 <p><big>CAVATORTI, Giuseppe: <i>Agostino Paradisi (1736-1783). Monografia. Parte I (1736-1764)</i>, Torino, Carlo Clausen - Hans Rinck (Villafranca [VR], Tipo-Litografia L. Rossi), 1907.</big></p>
 
@@ -62,7 +62,7 @@ Del presente testo esiste una 2a edizione corretta e ampliata: <i>Elogio del con
 Questa voce enciclopedica è disponibile anche sul sito della <a href="http://www.treccani.it/enciclopedia/agostino-paradisi_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione.</big></p>
 
 <p><big><i>Elogio del Conte Agostino Paradisi del dott. Pietro Schedoni</i>, Modena, Presso la Società Tipografica, 1789.<br>
-Il testo del presente volumetto venne poi migliorato e accresciuto due volte: 2a edizione, con lo stesso titolo, In Modena, Presso la Società Tipografica, 1793; 3a edizione, <i>Elogio del conte Agostino Paradisi scritto dal sig. Pietro Schedoni</i>, Modena, Per gli eredi Soliani, Tipografi Reali, 1819.</big></p>
+Il testo del presente volumetto venne poi migliorato e accresciuto due volte: II edizione, con lo stesso titolo, In Modena, Presso la Società Tipografica, 1793; III edizione, <i>Elogio del conte Agostino Paradisi scritto dal sig. Pietro Schedoni</i>, Modena, Per gli eredi Soliani, Tipografi Reali, 1819.</big></p>
 
 <p><big>MONTAGUTI, Silvio - ARMANI, Giuseppe: <i>Agostino Paradisi. 1736-1783</i>, Vignola (MO), Centro di documentazione, 1983.</big></p>
 
@@ -75,7 +75,7 @@ Il testo del presente volumetto venne poi migliorato e accresciuto due volte: 2a
 <p><big>ID.: <i>Agostino Paradisi il Giovane e la polemica letteraria italo-francese del 1765</i>, «Gente di Panaro. Rassegna di storia, “storie” e cultura locale – Valle del Panaro», a cura del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, n. 17 (2015), pp. 61-102.</big></p>
 
 <p><big>ID.: <i>Alexandre Deleyre, Agostino Paradisi</i> il Giovane <i>e la polemica letteraria del 1765 sulla (presunta) decadenza dell’Italia</i>, «Montesquieu.it», n. 10 (2018), pp. 139-201.
-Quest’articolo è disponibile anche sul sito <a href="https://montesquieu.unibo.it/article/view/8989/8895">«Montesquieu.it»</a>, alle pp. 1-35.</big></p>
+Quest’articolo è disponibile anche sul sito <a href="https://montesquieu.unibo.it/article/view/11243/11237">«Montesquieu.it»</a>, alle pp. 1-35.</big></p>
 
 <p><big>ID.: <i>Un ammiratore di Dante nel XVIII secolo, Agostino Paradisi</i> il Giovane, «Montesquieu.it», n. 13 (2021), pp. 167-193.
 Quest’articolo è disponibile anche sul sito <a href="https://montesquieu.unibo.it/article/view/12595/12403">«Montesquieu.it»</a>, alle pp. 1-15.</big></p>
