--- a/Paradisi.html
+++ b/Paradisi.html
@@ -58,7 +58,7 @@ Del presente testo esiste una II edizione corretta e ampliata: <i>Elogio del con
 
 <p><big>CAVATORTI, Giuseppe: <i>Agostino Paradisi (1736-1783). Monografia. Parte I (1736-1764)</i>, Torino, Carlo Clausen - Hans Rinck (Villafranca [VR], Tipo-Litografia L. Rossi), 1907.</big></p>
 
-<p><big>DATTERO, Alessandra: <i>Paradisi, Agostino</i>, in <i>Dizionario Biografico degli Italiani</i>, vol. LXXXI, Roma, Istituto della Enciclopedia italiana, 2014, pp. 281-286.
+<p><big>DATTERO, Alessandra: <i>Paradisi, Agostino</i>, in <i>Dizionario Biografico degli Italiani</i>, vol. LXXXI, Roma, Istituto della Enciclopedia italiana, 2014, pp. 281-286.<br>
 Questa voce enciclopedica è disponibile anche sul sito della <a href="http://www.treccani.it/enciclopedia/agostino-paradisi_%28Dizionario-Biografico%29/">Treccani</a>, senza paginazione.</big></p>
 
 <p><big><i>Elogio del Conte Agostino Paradisi del dott. Pietro Schedoni</i>, Modena, Presso la Società Tipografica, 1789.<br>
@@ -74,7 +74,7 @@ Il testo del presente volumetto venne poi migliorato e accresciuto due volte: II
 
 <p><big>ID.: <i>Agostino Paradisi il Giovane e la polemica letteraria italo-francese del 1765</i>, «Gente di Panaro. Rassegna di storia, “storie” e cultura locale – Valle del Panaro», a cura del Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, n. 17 (2015), pp. 61-102.</big></p>
 
-<p><big>ID.: <i>Alexandre Deleyre, Agostino Paradisi</i> il Giovane <i>e la polemica letteraria del 1765 sulla (presunta) decadenza dell’Italia</i>, «Montesquieu.it», n. 10 (2018), pp. 139-201.
+<p><big>ID.: <i>Alexandre Deleyre, Agostino Paradisi</i> il Giovane <i>e la polemica letteraria del 1765 sulla (presunta) decadenza dell’Italia</i>, «Montesquieu.it», n. 10 (2018), pp. 139-201.<br>
 Quest’articolo è disponibile anche sul sito <a href="https://montesquieu.unibo.it/article/view/11243/11237">«Montesquieu.it»</a>, alle pp. 1-35.</big></p>
 
 <p><big>ID.: <i>Un ammiratore di Dante nel XVIII secolo, Agostino Paradisi</i> il Giovane, «Montesquieu.it», n. 13 (2021), pp. 167-193.
