--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -59,7 +59,7 @@
 <td><big><big><strong><a href="fioretto.html">12. Il fioretto dei campi</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="aquila.html">13. L’aquila, l’avoltoio e la civetta</i></a></strong></td>
+<td><big><big><strong><a href="aquilaavoltoiocivetta.html">13. L’aquila, l’avoltoio e la civetta</i></a></strong></td>
 <td><big><big><strong><a href="cavaliere.html">14. Un nuovo cavaliere errante</a></strong></td></tr>
 
 <tr>
