--- a/Paradisi.html
+++ b/Paradisi.html
@@ -49,7 +49,7 @@ Il nostro personaggio spirò a Reggio Emilia il 19 febbraio 1783. Fu inumato nel
 	
 <h5><big><big><big><big><strong><center>BIBLIOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
 
-<p><big>ALFIERI, <i>Laura Margherita: Aspetti della cultura economica modenese nella seconda metà del XVIII secolo: Agostino Paradisi e Ludovico Ricci</i>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, coordinamento di L.M. Alfieri, Modena, Mucchi, 1988, pp. 117-170.</big></p>
+<p><big>ALFIERI, Laura Margherita<i>: Aspetti della cultura economica modenese nella seconda metà del XVIII secolo: Agostino Paradisi e Ludovico Ricci</i>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, coordinamento di L.M. Alfieri, Modena, Mucchi, 1988, pp. 117-170.</big></p>
 
 <p><big>EAD.: <i>Gli scritti di Agostino Paradisi (1736-1783) e la pubblica felicità</i>, «Bollettino Storico Reggiano», a. XXXIX (2006), n. 132, pp. 53-89.</big></p>
 
@@ -78,7 +78,7 @@ Il testo del presente volumetto venne poi migliorato e accresciuto due volte: II
 <p><big>ID.: <i>Alexandre Deleyre, Agostino Paradisi</i> il Giovane <i>e la polemica letteraria del 1765 sulla (presunta) decadenza dell’Italia</i>, «Montesquieu.it», n. 10 (2018), pp. 139-201.<br>
 Quest’articolo è disponibile anche nel sito web di <a href="https://montesquieu.unibo.it/article/view/8989/8895">«Montesquieu.it»</a>, alle pp. 1-35.</big></p>
 
-<p><big>ID.: <i>Un ammiratore di Dante nel XVIII secolo, Agostino Paradisi</i> il Giovane, «Montesquieu.it», n. 13 (2021), pp. 167-193.
+<p><big>ID.: <i>Un ammiratore di Dante nel XVIII secolo, Agostino Paradisi</i> il Giovane, «Montesquieu.it», n. 13 (2021), pp. 167-193.<br>
 Quest’articolo è disponibile anche nel sito web di <a href="https://montesquieu.unibo.it/article/view/12595/12403">«Montesquieu.it»</a>, alle pp. 1-15.</big></p>
 
 <p><big>VENTURI, Franco: <i>Ritratto di Agostino Paradisi</i>, «Rivista storica italiana», a. LXXIV (1962), fasc. 4, pp. 717-738.</big></p><br><br><br>
