--- a/Paradisi.html
+++ b/Paradisi.html
@@ -49,7 +49,7 @@ Il nostro personaggio spirò a Reggio Emilia il 19 febbraio 1783. Fu inumato nel
 	
 <h5><big><big><big><big><strong><center>BIBLIOGRAFIA MINIMA DI RIFERIMENTO</center></strong></big></big></big></big></big></h5><br><br>
 
-<p><big>ALFIERI, Laura Margherita<i>: Aspetti della cultura economica modenese nella seconda metà del XVIII secolo: Agostino Paradisi e Ludovico Ricci</i>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, coordinamento di L.M. Alfieri, Modena, Mucchi, 1988, pp. 117-170.</big></p>
+<p><big>ALFIERI, Laura Margherita: <i>Aspetti della cultura economica modenese nella seconda metà del XVIII secolo: Agostino Paradisi e Ludovico Ricci</i>, in M.L. Fornaciari Davoli (ricerca diretta da), <i>Economisti emiliani fra il XVI e il XVIII secolo</i>, coordinamento di L.M. Alfieri, Modena, Mucchi, 1988, pp. 117-170.</big></p>
 
 <p><big>EAD.: <i>Gli scritti di Agostino Paradisi (1736-1783) e la pubblica felicità</i>, «Bollettino Storico Reggiano», a. XXXIX (2006), n. 132, pp. 53-89.</big></p>
 
