--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -50,6 +50,9 @@ progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario M
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/giovane.jpg" width="650" height="700"><br><br>	
 <p><center><big>La Redorici Roffi in un primo piano tratto dal volantino che informava degli eventi pubblici organizzati in suo ricordo,<br> a un anno e mezzo dalla scomparsa, e culminanti nell’intitolazione a lei del Museo Civico di Vignola (5 novembre 2011).</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/foto e firma.jpg" width="550" height="600"><br><br>
+<p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi:<br> 
+<i>Tavernelle. Testimonianze e ricordi</i> (s.l., s.n. [Modena, Lito-Tipografia Paltrinieri], s.d. [ma: 1992]).</big></center></p>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/Tavernelle.jpg" width="500" height="700"><br><br>	
 <p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi:<br> <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/Chiese di Campiglio MODIFICATA.jpg" width="500" height="750"><br><br>
 <p><center><big>La tomba della Redorici Roffi e del marito.</big></center><br>
