--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -56,6 +56,11 @@ progetto editoriale del Gruppo di Documentazione Vignolese “Mezaluna - Mario M
 <p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi:<br> <i>Le Chiese di Campiglio. Memoria</i>, Vignola, Libreria “dei Contrari”, 2000.</big></center></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/Chiese di Campiglio MODIFICATA.jpg" width="500" height="750"><br><br>
 <p><center><big>La tomba della Redorici Roffi e del marito.</big></center><br>
+	
+<p><center><big>La prima di copertina di uno dei libri scritti dalla Redorici Roffi (per la precisione, si tratta dell’ultimo, pubblicato postumo):<br> 
+Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Grazia Grilli, Vignola, s.n. [Savignano sul Panaro, Tipolitografia FG], 2011.</big></center></p>
+<img src="img/celebri vignolesi/Redorici Roffi Augusta/Impresa.jpg" width="500" height="750"><br><br>
+	
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/tomba Augusta.jpg" width="500" height="700"><br><br>
 <p><center><big>Due storiche “colonne” del Museo Civico di Vignola,<br>  Angela Giansante (a sinistra) e Maria Pia Corsini (a destra), a lungo strette collaboratrici della Redorici Roffi.</center></big></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/ringraziamento.jpg" width="550" height="750"><br><br>
